--- a/Momenty.Web/Views/Home/Index.cshtml
+++ b/Momenty.Web/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
 <div class="jumbotron">
     <h1>ASP.NET hej</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <div class="scrape-btn--container">
+        <button id="scrape-btn" class="btn btn-primary">Scrape Funds</button>
+    </div>
 </div>
 
 <div class="row">
@@ -13,7 +15,7 @@
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a id="scrape-btn" class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Get more libraries</h2>
